# mr_wshandler_fastapi

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
demo/: index.html  main.py
mr_wshandler/: __init__.py  connection.py  manager.py
