[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mr_wshandler_fastapi"
version = "0.1.1"
description = "A lightweight WebSocket handler for FastAPI with connection management, rooms, and client ID routing"
readme = "README.md"
authors = [{name = "Moeez Raza"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "websockets>=12.0",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/moeezraza35/mr_wshandler_fastapi"
"Bug Reports" = "https://github.com/moeezraza35/mr_wshandler_fastapi/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["demo*", "docs*", "tests*"]